# Spiritmight

./: .gitignore  Dockerfile  LICENSE  README.md  client.py  config.env  deployment.yaml  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  redis_deployment.yaml  secrets_template.yaml  startup.sh
.github/workflows/: docker-image.yml
mock_api/: Dockerfile  docker-compose.yaml  main.py  startup.sh
scripts/: grafana_usage.lua  permit_handler.lua
