[tool.poetry]
name = "proxy"
version = "0.1.0"
description = ""
authors = ["Robin (Nurse) <<>>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aioredis = "^2.0.1"
PyYAML = "^6.0"
gunicorn = "^20.1.0"
aiohttp-ratelimiter = "^3.5.3"
uvloop = "^0.16.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
